更换掉弃用的newInstance方法